Reload widget to use newly created security

A security created on the fly could not be used in the current edit
session. This change fixes this problem.

BUG: 394394
FIXED-IN: 5.1.0